--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.6.1",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-lorem-ipsum": "0.0.1",
     "vue-router": "^3.1.6"
   },
