--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "babel-runtime": "^6.26.0",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.6.1",
-    "core-js": "^3.6.4",
+    "bootstrap-vue": "^2.11.0",
+    "core-js": "^3.6.5",
+    "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-lorem-ipsum": "0.0.1",
